Revert "Stabilize compose-cli-render-tests under Gradle 9.5 and ..."
Revert submission 40424733

Reason for revert: Found a better way for initscript.gradle 

Reverted changes: /q/submissionid:40424733

Bug: 522339885
Change-Id: I0187aacdabdaa4c00429c4f9fde6ee27383de749